--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
-    <p>This is the beginning.</p>
+    <h1>Hello World 2!</h1>
+    <p>This is the update.</p>
 
     <script src="js/main.js"></script>
   </body>
